tools: fix CJS/ESM toggle on small screens
Fixes: https://github.com/nodejs/node/issues/43468

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -953,6 +953,8 @@ kbd {
   background-repeat: no-repeat;
   width: 142px;
   height: 20px;
+  display: block;
+  cursor: pointer;
 }
 .js-flavor-selector:checked {
   background-image: url(./js-flavor-esm.svg);
